# OpenSymphony

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  WORKFLOW.md.example  chinese.py  config.yaml  config.yaml.example  decisions.md  greeting.py  hello.py  hello_china.py  hello_land.py  print_problem.py  pyproject.toml  test_output.py
.claude/skills/commit/: SKILL.md
.claude/skills/land/: SKILL.md  land_watch.py
.claude/skills/linear/: SKILL.md
.claude/skills/push/: SKILL.md
.github/ISSUE_TEMPLATE/: bug-report.yml  symphony-task.yml
docs/superpowers/plans/: 2026-03-23-orchestrator-completeness.md
docs/superpowers/specs/: 2026-03-23-orchestrator-completeness-design.md
lib/: claude_sdk_runner.py  cli.py  config.py  dashboard.py  hello.py  init.py  logger.py  math_utils.py  notifier.py  orchestrator.py  runner.py  string_utils.py  tracker.py  workflow.py  workspace.py
src/symphony/: __main__.py  cli.py  config.py  hello.py  hr.py  labels.py  logging_config.py  models.py  orchestrator.py  today_wednesday.py  workflow.py  workspace.py
src/symphony/agent/: claude_cli.py  runner.py
src/symphony/server/: dashboard.py
templates/: WORKFLOW.md  issue-template.md  symphony-task.yml
tests/: test_agent.py  test_agent_runner_sh.py  test_calculator.py  test_config.py  test_dashboard.py  test_hello.py  test_init.py  test_labels.py  test_logger.py  test_math_utils.py  test_models.py  test_notifier.py  test_orchestrator.py  test_runner.py  test_sdk_runner.py  test_string_utils.py  test_tracker.py  test_workflow.py  test_workspace.py
(+5 files in other folders)
