[project]
name = "symphony-python"
version = "0.1.0"
description = "Symphony - Issue tracker to coding agent orchestrator"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "structlog>=24.0",
    "typer>=0.12",
    "watchdog>=4.0",
    "starlette>=0.38",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
symphony = "symphony.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
